Fixing problem with z-indexes

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -190,7 +190,7 @@ h2{
     padding: 20px;
     position: fixed;
 	right: 0;
-    z-index: 1;	
+    z-index: 200;	
 }
 
 table{
